Fix table headers wrapping in table view

--- a/src/styles/components/table-view.scss
+++ b/src/styles/components/table-view.scss
@@ -1,17 +1,21 @@
 .table-view {
-  .table {
-    background: transparent;
-    overflow-x: auto;
-    overflow-y: hidden;
+	.table {
+		background: transparent;
+		overflow-x: auto;
+		overflow-y: hidden;
+	  
+		th {
+			white-space: nowrap;
+		}
 
-    .user {
-      margin: 0;
-    }
+		.user {
+			margin: 0;
+		}
 
-    .is-done {
-      font-size: .9rem;
-      margin: 0;
-    }
-  }
+		.is-done {
+			font-size: .9rem;
+			margin: 0;
+		}
+	}
 }
 
